# PySafeguard

./: .gitignore  .pypirc  AGENTS.md  README.md  azure-pipelines.yml  azure-publish.yml  gitversion.yml  pyproject.toml  versionnumber.ps1
.agents/skills/a2a-workflow/: SKILL.md
.agents/skills/api-patterns/: SKILL.md
.agents/skills/architecture/: SKILL.md
.agents/skills/build-and-release/: SKILL.md
.agents/skills/testing-guide/: SKILL.md
.github/: dependabot.yml
.github/codeql/: codeql-config.yml
.github/workflows/: codeql.yml
pipeline-templates/: build-steps.yml  global-variables.yml
samples/: A2AApiKeySecretExample.py  A2APasswordExample.py  A2APrivateKeyExample.py  AnonymousExample.py  CertificateExample.py  CertificateExternalExample.py  DeviceCodeExample.py  NewUserExample.py  PasswordExample.py  PasswordExternalExample.py  PersistentSignalRExample.py  PkceExample.py  SignalRExample.py  externalprovider.py  placeholder.py
src/: pysafeguard.py
src/pysafeguard/: __init__.py  a2a.py  async_a2a.py  async_client.py  async_connection.py  async_device_code.py  async_pkce.py  auth.py  client.py  connection.py  data_types.py  device_code.py  errors.py  event.py  exceptions.py  hidden_string.py  pkce.py  utility.py
tests/: __init__.py  conftest.py  test_a2a.py  test_async_client_new.py  test_async_connection_logic.py  test_auth.py  test_client_new.py  test_client_request_logic.py  test_connection_init.py  test_connection_logic.py  test_credential_redaction_audit.py  test_data_types.py  test_dependency_versions.py  test_device_code.py  test_errors.py  test_event.py  test_exceptions.py  test_hidden_string.py  test_pkce_helpers.py  test_public_api.py  test_safeguard_errors.py  test_samples_documentation.py  test_utility.py
tests/integration/: conftest.py  test_a2a.py  test_anonymous.py  test_auth_async.py  test_auth_lifecycle.py  test_auth_sync.py  test_certificate_auth.py  test_client_features.py  test_device_code_auth.py  test_event_listener.py  test_factories.py  test_invoke_async.py  test_invoke_sync.py  test_persistent_listener_factory.py  test_pkce_auth.py  test_streaming.py  test_token_async.py  test_token_sync.py  test_user_crud_async.py  test_user_crud_sync.py
