[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "pysafeguard"
description = "One Identity Safeguard Python Package"
version = "8.0.2"
readme = { file = "README.md", content-type = "text/markdown" }
keywords = ["safeguard", "oneidentity"]
license = "Apache"
repository = "https://github.com/OneIdentity/PySafeguard"
authors = [
    { name = "Dan Peterson", email = "Dan.Peterson@oneidentity.com" }
]
maintainers = [
    { name = "Dan Peterson", email = "Dan.Peterson@oneidentity.com" }
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3 :: Only",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests >= 2.32",
    "truststore >= 0.10",
    "typing_extensions >= 4.15; python_version < '3.11'",
]

[project.optional-dependencies]
async = [
    "aiohttp >= 3.13",
]
signalr = [
    "signalrcore >= 0.9",
]
dev = [
    "types-requests >= 2.32",
    "mypy >= 1.19",
    "ruff >= 0.14",
    "pytest >= 8.0",
    "pytest-asyncio >= 0.25",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "integration: tests that require a live Safeguard appliance (set SPP_HOST env var)",
]
testpaths = ["tests"]

[project.urls]
"Bug Tracker" = "https://github.com/OneIdentity/PySafeguard/issues"
