[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "pysafeguard"
description = "One Identity Safeguard Python Package"
version = "8.0.4"
readme = { file = "README.md", content-type = "text/markdown" }
keywords = ["safeguard", "oneidentity"]
license = "Apache"
repository = "https://github.com/OneIdentity/PySafeguard"
authors = [
    { name = "Dan Peterson", email = "Dan.Peterson@oneidentity.com" }
]
maintainers = [
    { name = "Dan Peterson", email = "Dan.Peterson@oneidentity.com" }
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3 :: Only",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests >= 2.32",
    "truststore >= 0.10",
    "typing_extensions >= 4.15; python_version < '3.11'",
    # Direct floor pins on transitive deps that have known CVEs at lower versions:
    # urllib3 >= 2.7.0 fixes CVE-2026-44431 (DNS rebinding), CVE-2026-44432 (proxy confusion),
    #   and the later high-severity advisory addressed in 2.7.0.
    # idna >= 3.7 fixes CVE-2026-45409 (ReDoS via crafted IDN inputs).
    "urllib3 >= 2.7.0",
    "idna >= 3.7",
]

[project.optional-dependencies]
async = [
    "aiohttp >= 3.14.1",
]
signalr = [
    # NOTE: signalrcore 1.0.2 (latest) hard-pins msgpack==1.1.2, which carries
    # GHSA-6v7p-g79w-8964 (fixed in msgpack 1.2.1). msgpack cannot be upgraded
    # until signalrcore relaxes this pin upstream; the exposure is limited to
    # consumers who opt into this optional extra. Tracked as accepted risk.
    "signalrcore >= 0.9",
]
dev = [
    "types-requests >= 2.32",
    "mypy >= 1.19",
    "ruff >= 0.14",
    "pytest >= 8.0",
    "pytest-asyncio >= 0.25",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "integration: tests that require a live Safeguard appliance (set SPP_HOST env var)",
]
testpaths = ["tests"]

[project.urls]
"Bug Tracker" = "https://github.com/OneIdentity/PySafeguard/issues"
